--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
-                    Comidas del fin <br> del mundo
+                    Curriculum <br> Carlos
                 </h1>
                 <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                    Me considero una persona respetuosa, empático y hábil para trabajar eficazmente en equipo.
+                    Esta combinación de destrezas en producción, atención al cliente y salubridad, sumada a mi capacidad
+                    para gestionar y guiar equipos, me permite desarrollar un perfil integral y versátil, preparado para
+                    enfrentar desafíos y transformar cada experiencia en una oportunidad de crecimiento.
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
