--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            Actualmente soy estudiante de un completo Bootcamp de Programación, donde salgo graduado de (Desarrollador
+            Full-Stack) y estudie Técnico en Mantenimiento Aeronáutico (Mecanico Aeronáutico).
         </p>
 
 
